# SnaffleMap

./: LICENSE  README.md  pyproject.toml
snafflemap/: __init__.py  cli.py  delta.py  filters.py  models.py  parsers.py  sorters.py  triage.py
snafflemap/analysis/: __init__.py  catalog.py  classify.py  credentials.py  enrich.py  models.py  score.py
snafflemap/exporters/: __init__.py  _utils.py  csv_export.py  evidence.py  html.py  jsonl.py  report.py  txt.py
snafflemap/templates/: evidence.html.j2  report.html.j2  static.html.j2
snafflemap/templates/report/: app.css  shell.html.j2
snafflemap/templates/report/js/: app.js  data.js  detail.js  dom.js  facets.js  list.js  map.js  query.js  rail.js  report.js  sortgroup.js  store.js  triage.js
tests/: conftest.py  test_analysis_models.py  test_catalog.py  test_classify.py  test_cli.py  test_credentials.py  test_delta.py  test_enrich.py  test_evidence.py  test_exporters.py  test_filters.py  test_identity.py  test_merge.py  test_models.py  test_parsers.py  test_report_embed.py  test_report_js.py  test_score.py  test_sorters.py  test_triage.py
tests/fixtures/: malformed.tsv  sample.json  sample.jsonl  sample.tsv
tests/js/: actions.test.js  data.test.js  dom.test.js  facets.test.js  query.test.js  sortgroup.test.js  store.test.js
